.kubernetes/vod-to-live/overlays/test/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vod-to-live-app
spec:
  hostnames:
    - navy-vod-to-live.axtest.net
  parentRefs:
    - name: mosaic
      namespace: gateway
  rules:
    - backendRefs:
        - name: vod-to-live
          port: 11900
      matches:
        - path:
            type: PathPrefix
            value: /
