.kubernetes/vod-to-live/overlays/test/image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vod-to-live
spec:
  template:
    spec:
      containers:
        - name: app
          image: harbor.axinom.com/mosaic/customizable-services-dev/vod-to-live-service:latest
